--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
-  "name": "api-test-dashboard",
+  "name": "earthwallet-multi-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "description": "EarthWallet – Turn Recycling Into Real Rewards",
+  "author": "Irving Duran <your.email@example.com>",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "cross-env VITE_DEV_SERVER_URL=http://localhost:5173 concurrently \"npm run dev\" \"wait-on tcp:5173 && electron .\"",
+    "electron:build": "npm run build && electron-builder",
+    "electron:build-win": "npm run build && electron-builder --win",
+    "kiosk:dev": "cross-env VITE_PRODUCT_MODE=kiosk npm run electron:dev",
+    "kiosk:build": "cross-env VITE_PRODUCT_MODE=kiosk npm run electron:build",
+    "wallet:dev": "cross-env VITE_PRODUCT_MODE=wallet npm run dev",
+    "wallet:build": "cross-env VITE_PRODUCT_MODE=wallet npm run build",
+    "dist": "cross-env ELECTRON_BUILDER_DISABLE_NATIVE_SYMLINKS=true electron-builder --win",
+    "dist:kioskd": "cross-env VITE_PRODUCT_MODE=kiosk npm run build && electron-builder --win",
+    "dist:kiosk": "cross-env VITE_PRODUCT_MODE=kiosk electron-builder --win -c.extraMetadata.build.win.icon=assets/icons/kiosk.ico",
+    "dist:wallet": "cross-env VITE_PRODUCT_MODE=wallet electron-builder --win -c.extraMetadata.build.win.icon=assets/icons/wallet.ico"
   },
   "dependencies": {
     "firebase": "^11.10.0",
@@ -20,12 +34,45 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.3.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.16",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "vite": "^5.4.11"
+    "vite": "^6.3.5",
+    "vite-plugin-electron": "^0.28.6",
+    "vite-plugin-electron-renderer": "^0.14.5",
+    "wait-on": "^7.2.0"
+  },
+  "build": {
+    "appId": "com.earthwallet.kiosk",
+    "productName": "EarthWallet Kiosk",
+    "icon": "assets/icons/kiosk.ico",
+    "files": [
+      "dist",
+      "electron",
+      "public",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "win": {
+      "target": "portable",
+      "sign": false,
+      "publisherName": null,
+      "signingHashAlgorithms": []
+    },
+    "mac": {
+      "target": []
+    },
+    "linux": {
+      "target": []
+    }
   }
 }
