--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "@capacitor/keyboard": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
+    "@yudiel/react-qr-scanner": "^2.3.1",
     "firebase": "^11.10.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3"
