--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "@yudiel/react-qr-scanner": "^2.3.1",
     "firebase": "^11.10.0",
     "qrcode": "^1.5.4",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
+    "lucide-react": "^0.525.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.12",
